[gd_scene load_steps=24 format=3 uid="uid://dyjf0jbmvbovf"]

[ext_resource type="Script" uid="uid://ks3odfhwc3i2" path="res://scenes/ui/computer/computer.gd" id="1_bnux2"]
[ext_resource type="Texture2D" uid="uid://cxbvk360kt82c" path="res://assets/ui/background.png" id="2_3m5nm"]
[ext_resource type="Texture2D" uid="uid://c7roga4wpasvk" path="res://assets/ui/app_photo_icon_normal.png" id="4_nbd0i"]
[ext_resource type="Texture2D" uid="uid://bbsywq0qeskth" path="res://assets/ui/app_photo_icon_focused.png" id="5_nbd0i"]
[ext_resource type="Texture2D" uid="uid://dkstde4n1ko5g" path="res://assets/ui/smail_app_screen.png" id="6_1fdas"]
[ext_resource type="Texture2D" uid="uid://gbrcbxjuxsut" path="res://assets/ui/app_mail_icon_focused.png" id="6_nn7wy"]
[ext_resource type="Texture2D" uid="uid://bb2yg730i11w0" path="res://assets/ui/app_mail_icon_normal.png" id="6_on1nr"]
[ext_resource type="Texture2D" uid="uid://jo4v26bpvjbv" path="res://assets/ui/spr_camera_frame.png" id="7_3m5nm"]
[ext_resource type="Texture2D" uid="uid://xiqqdrsh72we" path="res://assets/ui/close_button.png" id="7_cj8t4"]
[ext_resource type="Texture2D" uid="uid://dswhftllebe08" path="res://assets/ui/send_button.png" id="8_3m5nm"]
[ext_resource type="Texture2D" uid="uid://oukx6t0716km" path="res://assets/ui/shutdown_icon_normal.png" id="8_h0jkg"]
[ext_resource type="Texture2D" uid="uid://caxfekwaei8h8" path="res://assets/ui/shutdown_icon_focused-export.png" id="9_on1nr"]
[ext_resource type="Texture2D" uid="uid://ddqr4cqonk31r" path="res://assets/ui/mail_menu.png" id="11_mg23o"]
[ext_resource type="Texture2D" uid="uid://dj8cpug2e40qi" path="res://assets/ui/mail_header.png" id="11_p1ecj"]
[ext_resource type="Texture2D" uid="uid://b2xu6j6lbwc2e" path="res://assets/ui/mail_frame_background.png" id="12_bjh3n"]
[ext_resource type="FontFile" uid="uid://b7fkt6ixsvbgw" path="res://assets/ui/fonts/04B_03__/04B_03__.TTF" id="12_uu1qv"]
[ext_resource type="Texture2D" uid="uid://duvuan060ncw0" path="res://assets/ui/uncheked_to_do.png" id="13_mg23o"]
[ext_resource type="Texture2D" uid="uid://b5ttcow7hlkq1" path="res://assets/ui/mail_close_button.png" id="14_uu1qv"]
[ext_resource type="Texture2D" uid="uid://bfan68t18dxmh" path="res://assets/ui/photo_app_screen.png" id="16_mg23o"]

[sub_resource type="LabelSettings" id="LabelSettings_cj8t4"]
font = ExtResource("12_uu1qv")
font_size = 64
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nn7wy"]
bg_color = Color(1, 1, 1, 0.4)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p1ecj"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.76862746, 0.16862746, 0.10980392, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bjh3n"]
font = ExtResource("12_uu1qv")
font_size = 8
font_color = Color(0, 0, 0, 1)

[node name="Computer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bnux2")

[node name="Wallpaper" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 320.0
offset_bottom = 218.0
texture = ExtResource("2_3m5nm")

[node name="Desktop" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 3

[node name="Layout" type="VBoxContainer" parent="Desktop"]
layout_mode = 2

[node name="Time" type="Label" parent="Desktop/Layout"]
layout_mode = 2
size_flags_vertical = 6
text = "10:00"
label_settings = SubResource("LabelSettings_cj8t4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Desktop/Layout"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="Menu" type="Panel" parent="Desktop/Layout/MarginContainer"]
custom_minimum_size = Vector2(88, 26)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_nn7wy")

[node name="Bar" type="HBoxContainer" parent="Desktop/Layout/MarginContainer/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PhotoButton" type="TextureButton" parent="Desktop/Layout/MarginContainer/Menu/Bar"]
layout_mode = 2
focus_neighbor_left = NodePath("../PowerButton")
focus_neighbor_top = NodePath("../PowerButton")
focus_neighbor_right = NodePath("../MailButton")
focus_neighbor_bottom = NodePath("../MailButton")
focus_next = NodePath("../MailButton")
focus_previous = NodePath("../PowerButton")
texture_normal = ExtResource("4_nbd0i")
texture_focused = ExtResource("5_nbd0i")

[node name="MailButton" type="TextureButton" parent="Desktop/Layout/MarginContainer/Menu/Bar"]
layout_mode = 2
focus_neighbor_left = NodePath("../PhotoButton")
focus_neighbor_top = NodePath("../PhotoButton")
focus_neighbor_right = NodePath("../PowerButton")
focus_neighbor_bottom = NodePath("../PowerButton")
focus_next = NodePath("../PowerButton")
focus_previous = NodePath("../PhotoButton")
texture_normal = ExtResource("6_on1nr")
texture_focused = ExtResource("6_nn7wy")

[node name="PowerButton" type="TextureButton" parent="Desktop/Layout/MarginContainer/Menu/Bar"]
layout_mode = 2
focus_neighbor_left = NodePath("../MailButton")
focus_neighbor_top = NodePath("../MailButton")
focus_neighbor_right = NodePath("../PhotoButton")
focus_neighbor_bottom = NodePath("../PhotoButton")
focus_next = NodePath("../PhotoButton")
focus_previous = NodePath("../MailButton")
texture_normal = ExtResource("8_h0jkg")
texture_focused = ExtResource("9_on1nr")

[node name="MailApp" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="NinePatchRect" parent="MailApp"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_1fdas")
patch_margin_left = 1
patch_margin_top = 46
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Window" type="MarginContainer" parent="MailApp"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 46
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="Layout" type="HBoxContainer" parent="MailApp/Window"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="MailApp/Window/Layout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MailApp/Window/Layout/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MailApp/Window/Layout/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("11_mg23o")

[node name="NinePatchRect" type="NinePatchRect" parent="MailApp/Window/Layout/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("12_bjh3n")
region_rect = Rect2(0, 0, 151, 59)
patch_margin_right = 1

[node name="MarginContainer2" type="MarginContainer" parent="MailApp/Window/Layout"]
custom_minimum_size = Vector2(167, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="MailScrollContainer" type="ScrollContainer" parent="MailApp/Window/Layout/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
focus_next = NodePath("../../../../TopBar/CloseButton")
focus_previous = NodePath("../../../../TopBar/CloseButton")
focus_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_p1ecj")

[node name="MailContent" type="VBoxContainer" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer"]
layout_mode = 2

[node name="MailHeader" type="TextureRect" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent"]
layout_mode = 2
texture = ExtResource("11_p1ecj")

[node name="Margin" type="MarginContainer" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8

[node name="ToDoList" type="VBoxContainer" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent"]
layout_mode = 2

[node name="ToDo01" type="HBoxContainer" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="CheckBoxIcon" type="TextureRect" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo01"]
layout_mode = 2
texture = ExtResource("13_mg23o")
stretch_mode = 2

[node name="Label" type="Label" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo01"]
layout_mode = 2
text = "Capyba"
label_settings = SubResource("LabelSettings_bjh3n")

[node name="ToDo02" type="HBoxContainer" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="CheckBoxIcon" type="TextureRect" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo02"]
layout_mode = 2
texture = ExtResource("13_mg23o")
stretch_mode = 2

[node name="Label" type="Label" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo02"]
layout_mode = 2
text = "Tucano"
label_settings = SubResource("LabelSettings_bjh3n")

[node name="ToDo03" type="HBoxContainer" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="CheckBoxIcon" type="TextureRect" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo03"]
layout_mode = 2
texture = ExtResource("13_mg23o")
stretch_mode = 2

[node name="Label" type="Label" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo03"]
layout_mode = 2
text = "Apple and Tucano"
label_settings = SubResource("LabelSettings_bjh3n")

[node name="ToDo04" type="HBoxContainer" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="CheckBoxIcon" type="TextureRect" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo04"]
layout_mode = 2
texture = ExtResource("13_mg23o")
stretch_mode = 2

[node name="Label" type="Label" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo04"]
layout_mode = 2
text = "Apple and Tucano"
label_settings = SubResource("LabelSettings_bjh3n")

[node name="ToDo05" type="HBoxContainer" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="CheckBoxIcon" type="TextureRect" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo05"]
layout_mode = 2
texture = ExtResource("13_mg23o")
stretch_mode = 2

[node name="Label" type="Label" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo05"]
layout_mode = 2
text = "Apple and Tucano"
label_settings = SubResource("LabelSettings_bjh3n")

[node name="ToDo06" type="HBoxContainer" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="CheckBoxIcon" type="TextureRect" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo06"]
layout_mode = 2
texture = ExtResource("13_mg23o")
stretch_mode = 2

[node name="Label" type="Label" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo06"]
layout_mode = 2
text = "Apple and Tucano"
label_settings = SubResource("LabelSettings_bjh3n")

[node name="ToDo07" type="HBoxContainer" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="CheckBoxIcon" type="TextureRect" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo07"]
layout_mode = 2
texture = ExtResource("13_mg23o")
stretch_mode = 2

[node name="Label" type="Label" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo07"]
layout_mode = 2
text = "Apple and Tucano"
label_settings = SubResource("LabelSettings_bjh3n")

[node name="ToDo08" type="HBoxContainer" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="CheckBoxIcon" type="TextureRect" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo08"]
layout_mode = 2
texture = ExtResource("13_mg23o")
stretch_mode = 2

[node name="Label" type="Label" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo08"]
layout_mode = 2
text = "Apple and Tucano"
label_settings = SubResource("LabelSettings_bjh3n")

[node name="ToDo09" type="HBoxContainer" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="CheckBoxIcon" type="TextureRect" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo09"]
layout_mode = 2
texture = ExtResource("13_mg23o")
stretch_mode = 2

[node name="Label" type="Label" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo09"]
layout_mode = 2
text = "Apple and Tucano"
label_settings = SubResource("LabelSettings_bjh3n")

[node name="ToDo10" type="HBoxContainer" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="CheckBoxIcon" type="TextureRect" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo10"]
layout_mode = 2
texture = ExtResource("13_mg23o")
stretch_mode = 2

[node name="Label" type="Label" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo10"]
layout_mode = 2
text = "Apple and Tucano"
label_settings = SubResource("LabelSettings_bjh3n")

[node name="ToDo11" type="HBoxContainer" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="CheckBoxIcon" type="TextureRect" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo11"]
layout_mode = 2
texture = ExtResource("13_mg23o")
stretch_mode = 2

[node name="Label" type="Label" parent="MailApp/Window/Layout/MarginContainer2/MailScrollContainer/MailContent/ToDoList/ToDo11"]
layout_mode = 2
text = "Apple and Tucano"
label_settings = SubResource("LabelSettings_bjh3n")

[node name="TopBar" type="MarginContainer" parent="MailApp"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.178
offset_bottom = -0.040000916
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 5

[node name="CloseButton" type="TextureButton" parent="MailApp/TopBar"]
layout_mode = 2
focus_neighbor_left = NodePath("../../Window/Layout/MarginContainer2/MailScrollContainer")
focus_neighbor_right = NodePath("../../Window/Layout/MarginContainer2/MailScrollContainer")
focus_next = NodePath("../../Window/Layout/MarginContainer2/MailScrollContainer")
focus_previous = NodePath("../../Window/Layout/MarginContainer2/MailScrollContainer")
texture_normal = ExtResource("14_uu1qv")

[node name="PhotoApp" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="NinePatchRect" parent="PhotoApp"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_mg23o")
patch_margin_top = 32

[node name="Window" type="MarginContainer" parent="PhotoApp"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 43
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 7

[node name="Photos" type="VBoxContainer" parent="PhotoApp/Window"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 14

[node name="PhotosRow" type="HBoxContainer" parent="PhotoApp/Window/Photos"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="PhotoButton01" type="TextureButton" parent="PhotoApp/Window/Photos/PhotosRow"]
custom_minimum_size = Vector2(54, 32)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("7_3m5nm")

[node name="PhotoButton02" type="TextureButton" parent="PhotoApp/Window/Photos/PhotosRow"]
custom_minimum_size = Vector2(54, 32)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("7_3m5nm")

[node name="PhotoButton03" type="TextureButton" parent="PhotoApp/Window/Photos/PhotosRow"]
custom_minimum_size = Vector2(54, 32)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("7_3m5nm")

[node name="PhotoButton04" type="TextureButton" parent="PhotoApp/Window/Photos/PhotosRow"]
custom_minimum_size = Vector2(54, 32)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("7_3m5nm")

[node name="TopBar" type="MarginContainer" parent="PhotoApp"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.178
offset_bottom = -0.040000916
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 5

[node name="CloseButton" type="TextureButton" parent="PhotoApp/TopBar"]
layout_mode = 2
focus_neighbor_left = NodePath("../SendButton")
focus_neighbor_top = NodePath("../../Window/Photos/PhotosRow/PhotoButton04")
focus_neighbor_right = NodePath("../../Window/Photos/PhotosRow/PhotoButton04")
focus_neighbor_bottom = NodePath("../../Window/Photos/PhotosRow/PhotoButton01")
focus_next = NodePath("../SendButton")
focus_previous = NodePath("../SendButton")
texture_normal = ExtResource("7_cj8t4")

[node name="SendButton" type="TextureButton" parent="PhotoApp/TopBar"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_neighbor_top = NodePath("../CloseButton")
focus_neighbor_bottom = NodePath("../../Window/Photos/PhotosRow/PhotoButton04")
focus_next = NodePath("../../Window/Photos/PhotosRow/PhotoButton01")
focus_previous = NodePath("../CloseButton")
texture_normal = ExtResource("8_3m5nm")

[connection signal="pressed" from="Desktop/Layout/MarginContainer/Menu/Bar/PhotoButton" to="." method="_on_app_icon_pressed" binds= ["photoapp"]]
[connection signal="pressed" from="Desktop/Layout/MarginContainer/Menu/Bar/MailButton" to="." method="_on_app_icon_pressed" binds= ["mailapp"]]
[connection signal="pressed" from="Desktop/Layout/MarginContainer/Menu/Bar/PowerButton" to="." method="_on_power_button_pressed"]
[connection signal="pressed" from="MailApp/TopBar/CloseButton" to="." method="_on_close_app_pressed" binds= ["mailapp"]]
[connection signal="pressed" from="PhotoApp/TopBar/CloseButton" to="." method="_on_close_app_pressed" binds= ["photoapp"]]
